--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ beautifulsoup4==4.9.1
 certifi==2020.4.5.1
 chardet==3.0.4
 idna==2.9
+psycopg2==2.8.5
 requests==2.23.0
 soupsieve==2.0.1
+SQLAlchemy==1.3.17
 urllib3==1.25.9
